--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,9 @@
 tensorflow-cpu
+exceptiongroup==1.2.1
+iniconfig==2.0.0
+packaging==24.0
+pluggy==1.5.0
+pytest==8.2.0
+tomli==2.0.1
+torch==2.3.0
+numpy==1.26.4
