--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,10 @@ pytest==8.2.0
 tomli==2.0.1
 torch==2.3.0
 numpy==1.26.4
+keras==3.3.3
+pytest==8.2.1
+requests==2.32.2
+tensorboard==2.16.2
+tensorboard-data-server==0.7.2
+tensorflow==2.16.1
+tensorflow-io-gcs-filesystem==0.37.0
