--- a/requirements.txt
+++ b/requirements.txt
@@ -12,4 +12,4 @@ requests==2.32.2
 tensorboard==2.16.2
 tensorboard-data-server==0.7.2
 tensorflow==2.16.1
-tensorflow-io-gcs-filesystem==0.37.0
+tensorflow-cpu==2.16.1
